--- a/style.css
+++ b/style.css
@@ -9,12 +9,13 @@
 
 body{
     font-family:'Poppins', sans-serif;
+    background-color: rgb(180, 164, 180);
 }
 html{
     scroll-behavior: smooth;
 }
 p{
-    color: rgb(85, 85, 85);
+    color: black;
 }
 
 a,
@@ -31,7 +32,7 @@ nav,
 nav{
     justify-content: space-around;
     align-items: center;
-    height: 17vh;
+    height: 10vh;
 }
 .nav-links{
     gap: 2rem;
@@ -58,7 +59,8 @@ a:hover{
 .logo:hover{
     cursor: default;
 }
-.hamburger-nav{
+/*HAMBURGER MENU*/
+#hamburger-nav{
     display: none;
 }
 .hamburger-menu{
@@ -78,6 +80,8 @@ a:hover{
 .hamburger-icon span{
     width: 100%;
     height: 2px
+    
+
 }
 .menu-links{
     position: absolute;
@@ -170,7 +174,7 @@ section{
     display: flex;
     justify-content: center;
     margin-top: 1rem;
-    gap: 1rem;
+    gap: 7rem;
 }
 /*ICONS*/
 .icon{
@@ -214,7 +218,7 @@ section{
     border: rgb(255, 255, 255)0.1rem solid;
 }
 .btn-container{
-    gap: 1rem;
+    gap: 1.5rem;
 }
 
 /*ABOUT SECTION*/
@@ -303,8 +307,8 @@ article.icon{
 }
 .project-img{
     border-radius: 2rem;
-    width: 90%;
-    height: 90%;
+    width: 30%;
+    height: 30%;
 }
 .project-title{
     margin: 1rem;
